# Event-V

./: Cargo.toml  README.md  TODO.md  macro-spec.md  verify.sh
.github/workflows/: ci.yml
examples/bridge/: README.md  abs.rs  main.rs  ref1.rs  ref2.rs  ref3.rs  shared.rs
examples/bridge_macro/: abs.rs  main.rs  ref1.rs  ref2.rs  ref3.rs  shared.rs
examples/bridge_manual/: ref2.rs  ref3.rs  shared.rs
examples/buffer/: README.md  buf0.rs  buf1.rs
examples/buffer_macro/: buf0.rs  buf1.rs  main.rs
examples/buffer_manual/: README.md  buf0.rs  main.rs
examples/counter/: README.md  main.rs
examples/snakes/: README.md  abs.rs  board.rs  dice.rs  main.rs  shared.rs  snakes.rs
macros/: Cargo.toml
macros/src/: animate.rs  expand.rs  lib.rs  parse.rs
src/: abs.rs  animate.rs  exec_types.rs  lex_lt.rs  lib.rs  machine.rs  ref1.rs  ref2.rs  ref3.rs  shared.rs
src/exec_types/: mod.rs  nat.rs  parse_input.rs  sample.rs  seq.rs
