[workspace]
members = ["macros"]

[package]
name = "event-v"
version = "0.1.0"
edition = "2021"

[dependencies]
# Verus crates are pinned to a tagged Verus release so CI can install the
# matching prebuilt toolchain. Bump `tag` here and VERUS_RELEASE in
# .github/workflows/ci.yml together when updating Verus.
vstd = { git = "https://github.com/verus-lang/verus.git", tag = "release/0.2026.05.13.fae8859" }
verus_builtin_macros = { git = "https://github.com/verus-lang/verus.git", tag = "release/0.2026.05.13.fae8859" }
event-v-macros = { path = "macros" }
num = "0.4"
rand = "0.8"

[package.metadata.verus]
verify = true

[lints.rust]
# Verus supports ghost code, code that is used for proofs but erased during compilation.
# This means that ghost items that are imported via `use` will not exist during a normal
# `cargo build`, leading to compilation errors. These errors can be prevented by guarding the
# use statements with the feature flag `verus_only`, which Verus turns on during
# verification.
#
# WARNING: this flag should only be used on import statements and setting config attributes,
# see the documentation (https://verus-lang.github.io/verus/guide/erasure.html) for more details.
#
# This lint suppression prevents cargo from complaining about the
# `verus_only` feature flag being undeclared.
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(verus_only)',
] }