[package]
name = "event-v-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
verus_syn = { git = "https://github.com/verus-lang/verus.git", tag = "release/0.2026.05.13.fae8859", features = ["full", "printing"] }
quote = "1"
proc-macro2 = "1"
